--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 #app {
     width: fit-content;
     margin: auto;
-    padding-top: 52px;
+    padding: 62px;
 }
 
 header {
@@ -38,16 +38,19 @@ h2 {
     color: #FFFFFF;
 }
 .games {
-    background-color: aqua;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 525px;
     height: 40px;
+    background: linear-gradient(to right, #FFFFFF 30%, #D6C47B 40%);
 }
 
 .games p {
     margin: 40px;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 800;
 }
 
 #containerGames {
