--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body * {
@@ -63,4 +64,9 @@ h2 {
 
 img {
     padding-left: 18px;
+}
+
+.game:hover {
+    transform: scale(1.1);
+    cursor: pointer;
 }
