--- a/style.css
+++ b/style.css
@@ -74,24 +74,67 @@ h2 {
     header img {
         width: 200px;
     }
+
     h1 {
         font-size: 48px;
     }
+
     h2 span {
         font-size: 30px;
     }
+
     h2 {
         font-size: 20px;
     }
+
     .game {
-        /* width: fit-content; */
         transform: scale(0.85);
-        /* max-width: 500px; */
     }
 
     .game:hover {
         transform: scale(0.89);
         cursor: pointer;
+    }
+
+    #containerGames {
+        gap: 0;
+    }
+}
+
+@media (max-width: 375px) {
+    header {
+        margin-bottom: 20px;
+    }
+
+    header img {
+        width: 150px;
+    }
+
+    h1 {
+        font-size: 38px;
+    }
+
+    h2 span {
+        font-size: 20px;
+    }
+
+    h2 {
+        font-size: 15px;
+    }
+
+    .game {
+        /* width: fit-content; */
+        transform: scale(0.65);
+        /* max-width: 500px; */
+    }
+
+    .game:hover {
+        transform: scale(0.69);
+        cursor: pointer;
+    }
+
+    #containerGames {
+        gap: 0;
     }
 }
 
